--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -3,9 +3,9 @@
  */
 {
   $schema: "https://raw.githubusercontent.com/electron-userland/electron-builder/master/packages/app-builder-lib/scheme.json",
-  appId: "YourAppID",
+  appId: "OBU",
   asar: true,
-  productName: "YourAppName",
+  productName: "OBU",
   directories: {
     output: "release/${version}"
   },
