--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "version-testing",
   "version": "1.0.0",
-  "main": "dist-electron/main/index.js",
+  "main": "dist-electron/main.js",
   "repository": "https://github.com/MatijaNovosel/version-testing.git",
   "description": "Version testing for Electron.",
   "author": "Matija Novosel",
@@ -28,7 +28,6 @@
     "@vitejs/plugin-vue": "^4.3.3",
     "electron": "^27.1.3",
     "electron-builder": "^24.6.3",
-    "tree-kill": "^1.2.2",
     "typescript": "^5.1.6",
     "vite": "^5.0.4",
     "vite-plugin-electron": "^0.15.3",
