--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -15,13 +15,14 @@
     artifactName: "${productName}-Mac-${version}-Installer.${ext}"
   },
   win: {
+    icon: "favicon.ico",
     target: [
       {
         target: "nsis",
         arch: ["x64"]
       }
     ],
-    artifactName: "${productName}-Windows-${version}-Setup.${ext}"
+    artifactName: "${productName}-${version}-Setup.${ext}"
   },
   nsis: {
     oneClick: false,
